@@ -339,7 +339,7 @@ class ExampleSubmissionIntegrationTest extends AbstractSpringIntegrationIndepend
         assertThat(textBlocks).isNotEmpty();
 
         feedback.setCredits(1.0);
-        feedback.setReference(textBlocks.get(0).getId());
+        feedback.setReference(textBlocks.getFirst().getId());
         participationUtilService.addFeedbackToResult(feedback, submission.getLatestResult());
 
         ExampleSubmission exampleSubmission = importExampleSubmission(textExercise.getId(), submission.getId(), HttpStatus.OK);
@@ -347,10 +347,10 @@ class ExampleSubmissionIntegrationTest extends AbstractSpringIntegrationIndepend
         assertThat(exampleSubmission.getId()).isNotNull();
         assertThat(((TextSubmission) exampleSubmission.getSubmission()).getText()).isEqualTo(submission.getText());
         assertThat(exampleSubmission.getSubmission().getLatestResult().getFeedbacks()).isNotEmpty();
-        assertThat(exampleSubmission.getSubmission().getLatestResult().getFeedbacks().get(0).getCredits()).isEqualTo(feedback.getCredits());
+        assertThat(exampleSubmission.getSubmission().getLatestResult().getFeedbacks().getFirst().getCredits()).isEqualTo(feedback.getCredits());
         assertThat(copiedTextBlocks).isNotEmpty();
-        assertThat(copiedTextBlocks.get(0).getText()).isEqualTo(textBlock.getText());
-        assertThat(exampleSubmission.getSubmission().getLatestResult().getFeedbacks().get(0).getReference()).isEqualTo(copiedTextBlocks.get(0).getId());
+        assertThat(copiedTextBlocks.getFirst().getText()).isEqualTo(textBlock.getText());
+        assertThat(exampleSubmission.getSubmission().getLatestResult().getFeedbacks().getFirst().getReference()).isEqualTo(copiedTextBlocks.getFirst().getId());
     }
 
     @Test
@@ -386,8 +386,8 @@ class ExampleSubmissionIntegrationTest extends AbstractSpringIntegrationIndepend
         Optional<Result> orginalResult = resultRepository.findDistinctWithFeedbackBySubmissionId(originalSubmission.getId());
 
         ExampleSubmission exampleSubmission = importExampleSubmission(exercise.getId(), originalSubmission.getId(), HttpStatus.OK);
-        assertThat(exampleSubmission.getSubmission().getResults().get(0).getFeedbacks().get(0).getGradingInstruction().getId())
-                .isEqualTo(orginalResult.orElseThrow().getFeedbacks().get(0).getGradingInstruction().getId());
+        assertThat(exampleSubmission.getSubmission().getResults().getFirst().getFeedbacks().getFirst().getGradingInstruction().getId())
+                .isEqualTo(orginalResult.orElseThrow().getFeedbacks().getFirst().getGradingInstruction().getId());
     }
 
     @Test
