@@ -2,6 +2,9 @@ package de.tum.in.www1.artemis.lecture;
 
 import static de.tum.in.www1.artemis.util.RequestUtilService.deleteProgrammingExerciseParamsFalse;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
 
 import java.util.HashSet;
 import java.util.List;
@@ -66,7 +69,7 @@ class ExerciseUnitIntegrationTest extends AbstractSpringIntegrationIndependentTe
     void initTestCase() throws Exception {
         userUtilService.addUsers(TEST_PREFIX, 1, 2, 0, 1);
         List<Course> courses = courseUtilService.createCoursesWithExercisesAndLectures(TEST_PREFIX, true, 2);
-        this.course1 = this.courseRepository.findByIdWithExercisesAndExerciseDetailsAndLecturesElseThrow(courses.get(0).getId());
+        this.course1 = this.courseRepository.findByIdWithExercisesAndExerciseDetailsAndLecturesElseThrow(courses.getFirst().getId());
         this.lecture1 = this.course1.getLectures().stream().findFirst().orElseThrow();
 
         this.textExercise = textExerciseRepository.findByCourseIdWithCategories(course1.getId()).stream().findFirst().orElseThrow();
@@ -211,6 +214,7 @@ class ExerciseUnitIntegrationTest extends AbstractSpringIntegrationIndependentTe
             request.get("/api/exercises/" + exercise.getId(), HttpStatus.OK, Exercise.class);
         }
 
+        verify(competencyProgressService, never()).updateProgressForUpdatedLearningObjectAsync(any(), any());
     }
 
 }
