@@ -49,7 +49,6 @@ import de.tum.in.www1.artemis.repository.metis.PostRepository;
 import de.tum.in.www1.artemis.repository.plagiarism.PlagiarismCaseRepository;
 import de.tum.in.www1.artemis.repository.plagiarism.PlagiarismComparisonRepository;
 import de.tum.in.www1.artemis.web.rest.dto.ExerciseDetailsDTO;
-import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
 import de.tum.in.www1.artemis.web.rest.errors.EntityNotFoundException;
 
 class TextSubmissionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
@@ -123,7 +122,7 @@ class TextSubmissionIntegrationTest extends AbstractSpringIntegrationIndependent
 
         assertThatExceptionOfType(EntityNotFoundException.class).isThrownBy(() -> submissionRepository.findByIdWithEagerResultsAndFeedbackAndTextBlocksElseThrow(Long.MAX_VALUE));
 
-        assertThatExceptionOfType(BadRequestAlertException.class)
+        assertThatExceptionOfType(EntityNotFoundException.class)
                 .isThrownBy(() -> submissionRepository.getTextSubmissionWithResultAndTextBlocksAndFeedbackByResultIdElseThrow(Long.MAX_VALUE));
     }
 
@@ -202,8 +201,8 @@ class TextSubmissionIntegrationTest extends AbstractSpringIntegrationIndependent
                 TextSubmission.class);
 
         assertThat(textSubmissions).as("one text submission was found").hasSize(1);
-        assertThat(textSubmissions.get(0).getId()).as("correct text submission was found").isEqualTo(textSubmission.getId());
-        assertThat(((StudentParticipation) textSubmissions.get(0).getParticipation()).getStudent()).as(TEST_PREFIX + "student of participation is hidden").isEmpty();
+        assertThat(textSubmissions.getFirst().getId()).as("correct text submission was found").isEqualTo(textSubmission.getId());
+        assertThat(((StudentParticipation) textSubmissions.getFirst().getParticipation()).getStudent()).as(TEST_PREFIX + "student of participation is hidden").isEmpty();
     }
 
     @Test
@@ -214,8 +213,8 @@ class TextSubmissionIntegrationTest extends AbstractSpringIntegrationIndependent
         List<TextSubmission> textSubmissions = request.getList("/api/exercises/" + finishedTextExercise.getId() + "/text-submissions", HttpStatus.OK, TextSubmission.class);
 
         assertThat(textSubmissions).as("one text submission was found").hasSize(1);
-        assertThat(textSubmissions.get(0).getId()).as("correct text submission was found").isEqualTo(textSubmission.getId());
-        assertThat(((StudentParticipation) textSubmissions.get(0).getParticipation()).getStudent()).as(TEST_PREFIX + "student of participation is hidden").isNotEmpty();
+        assertThat(textSubmissions.getFirst().getId()).as("correct text submission was found").isEqualTo(textSubmission.getId());
+        assertThat(((StudentParticipation) textSubmissions.getFirst().getParticipation()).getStudent()).as(TEST_PREFIX + "student of participation is hidden").isNotEmpty();
     }
 
     @Test
